init command execute mode
